# Common

./: CMakeLists.txt  README.md  Service.cpp  Service.hpp  Socket.cpp  package.json
protocol/: header.message.proto  message-header.proto
src/: CMakeLists.txt  Client.cpp  Client.h  Client.hpp  Server.cpp  Server.h  Service.cpp  Service.hpp  Socket.cpp  Socket.hpp
src/proto/: CMakeLists.txt  control_payload.proto  data_header_payload.proto  header_message.proto  request.proto  response.proto  step.proto
src/test/: client_test.cpp  server_test.cpp  service_test.cpp
