CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
SET(CMAKE_CXX_STANDARD 11)

INCLUDE(FINDPROTOBUF)

ADD_SUBDIRECTORY(proto)

SET(SOURCE_FILES SERVICE.CPP SOCKET.CPP)

SET(LIBRARIES proto)

INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})

ADD_LIBRARY(common ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(common ${LIBRARIES})
