CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
SET(CMAKE_CXX_STANDARD 11)

INCLUDE(FindProtobuf)

ADD_SUBDIRECTORY(proto)

# Threads
FIND_PACKAGE(Threads REQUIRED)

SET(SOURCE_FILES Service.cpp Socket.cpp Server.cpp Client.cpp)

SET(LIBRARIES proto ${CMAKE_THREAD_LIBS_INIT})


INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})

add_executable (server Socket.cpp Server.cpp)
add_executable (client Socket.cpp Client.cpp)

ADD_LIBRARY(common ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(common ${LIBRARIES})

TARGET_LINK_LIBRARIES(server ${LIBRARIES})
TARGET_LINK_LIBRARIES(client ${LIBRARIES})
