cmake_minimum_required(VERSION 3.5)
INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})

FILE(GLOB PROTO_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")

PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ${PROTO_FILES})
ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})
TARGET_LINK_LIBRARIES(proto ${PROTOBUF_LIBRARY})
